# Tinyhttpd

./: .ycm_extra_conf.py  CMakeLists.txt  a.out  client  httpd.c  httpd_s.c  server  server_s  simpleclient_s.c  test_stat.c
base64/: CMakeLists.txt
base64/src/: base64.c
lib/: libssl.so.3  libutils.so.1  libutils.so.1.0.1
lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
tests/: CMakeLists.txt  httpd.c  simpleclient.c
